--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Snoopy Clicker is a timed fast paced game. There high score is infinate. Attache
                         </ul>
                     </div>
                     <div class="bg-gray-900 p-4 border-t border-red-700/50 text-center">
-                        <a href="#" class="text-red-500 font-semibold hover:text-red-300 transition duration-150">View Code Details &rarr;</a>
+                        <a href="/Clicker.html" class="text-red-500 font-semibold hover:text-red-300 transition duration-150">View Code Details &rarr;</a>
                     </div>
                 </div>
 
