--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ A newly themed version of the classic game Tic-Tac-Toe.                      </p
                         </ul>
                     </div>
                     <div class="bg-gray-900 p-4 border-t border-red-700/50 text-center">
-                        <a href="#" class="text-red-500 font-semibold hover:text-red-300 transition duration-150">View App Demo &rarr;</a>
+                        <a href="/Tic-Tac-Toe.html" class="text-red-500 font-semibold hover:text-red-300 transition duration-150">View App Demo &rarr;</a>
                     </div>
                 </div>
 
@@ -134,7 +134,7 @@ Click O'Dometer is a game that tracks the amount of clicks the player makes thro
                         </ul>
                     </div>
                     <div class="bg-gray-900 p-4 border-t border-red-700/50 text-center">
-                        <a href="#" class="text-red-500 font-semibold hover:text-red-300 transition duration-150">Start Quiz &rarr;</a>
+                        <a href="/ClickODometer.html" class="text-red-500 font-semibold hover:text-red-300 transition duration-150">Start Quiz &rarr;</a>
                     </div>
                 </div>
             </div>
