--- a/Tic-Tac-Toe.html
+++ b/Tic-Tac-Toe.html
@@ -55,7 +55,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex justify-between items-center">
             <h1 class="text-2xl font-extrabold text-red-500">Tic-Tac-Toe</h1>
             <!-- Mock Link back to main portfolio -->
-            <a href="/index.html" class="text-gray-400 hover:text-red-500 transition duration-150 text-sm font-medium">
+            <a href="index.html" class="text-gray-400 hover:text-red-500 transition duration-150 text-sm font-medium">
                 &larr; Back to Main Portfolio
             </a>
         </div>
