--- a/ClickODometer.html
+++ b/ClickODometer.html
@@ -28,7 +28,7 @@
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 flex justify-between items-center">
             <h1 class="text-2xl font-bold text-red-500">Project: Snoopy Clicker</h1>
             <!-- Mock Link back to main portfolio -->
-            <a href="/index.html" class="text-gray-300 hover:text-red-500 transition duration-150 text-sm font-medium">
+            <a href="index.html" class="text-gray-300 hover:text-red-500 transition duration-150 text-sm font-medium">
                 &larr; Back to Portfolio Showcase
             </a>
         </div>
@@ -97,3 +97,4 @@ Click O'Dometer is a very simple game where you just click the button as many ti
 
 </body>
 </html>
+
